--- a/buildspec.yml
+++ b/buildspec.yml
@@ -1,12 +1,11 @@
 version: 0.2
 
 phases:
+  install:
+    runtime-versions:
+      nodejs: 14
+    commands:
+      - npm install -g htmlhint
   build:
     commands:
-      - echo "Zipping HTML files..."
-      - mkdir build
-      - cp index.html build/
-artifacts:
-  base-directory: build
-  files:
-    - "**/*"
+      - htmlhint index.html
